--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,10 @@ description = "An implementation of PMD/PMX/VMD used in MMD (MikuMikuDance)."
 authors = ["aoowweenn <aoowweenn@gmail.com>"]
 
 [dependencies]
-nom = "^2.1"
 byteorder = "^1"
-encoding = "^0.2"
+encoding = "*"
+cgmath = "*"
+
+[dependencies.nom]
+version = "^3.2"
+features = ["nightly"]
