rewrite mat and bone

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ authors = ["aoowweenn <aoowweenn@gmail.com>"]
 byteorder = "1"
 encoding = "*"
 cgmath = "*"
-num = "*"
+num-traits = "*"
 enum-primitive-derive = "*"
 enumflags = "*"
 enumflags_derive = "*"
